# mini-ray

./: Cargo.toml  README.md
crates/mini-ray-client/: Cargo.toml
crates/mini-ray-client/examples/: add_one.rs  counter_actor.rs
crates/mini-ray-client/src/: lib.rs
crates/mini-ray-core/: Cargo.toml
crates/mini-ray-core/src/: lib.rs
crates/mini-ray-head/: Cargo.toml
crates/mini-ray-head/src/: lib.rs  main.rs
crates/mini-ray-object-store/: Cargo.toml
crates/mini-ray-object-store/src/: lib.rs
crates/mini-ray-proto/: Cargo.toml  build.rs
crates/mini-ray-proto/proto/: mini_ray.proto
crates/mini-ray-proto/src/: lib.rs
crates/mini-ray-runtime/: Cargo.toml
crates/mini-ray-runtime/src/: lib.rs
crates/mini-ray-scheduler/: Cargo.toml
crates/mini-ray-scheduler/src/: lib.rs
crates/mini-ray-worker/: Cargo.toml
crates/mini-ray-worker/src/: lib.rs  main.rs
crates/mini-ray-worker/tests/: end_to_end.rs
docs/: session-2026-06-23.md
