[workspace]
members = [
    "crates/mini-ray-core",
    "crates/mini-ray-proto",
    "crates/mini-ray-object-store",
    "crates/mini-ray-scheduler",
    "crates/mini-ray-runtime",
    "crates/mini-ray-head",
    "crates/mini-ray-worker",
    "crates/mini-ray-client",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[workspace.dependencies.mini-ray-core]
path = "crates/mini-ray-core"

[workspace.dependencies.mini-ray-proto]
path = "crates/mini-ray-proto"

[workspace.dependencies.mini-ray-object-store]
path = "crates/mini-ray-object-store"

[workspace.dependencies.mini-ray-scheduler]
path = "crates/mini-ray-scheduler"

[workspace.dependencies.mini-ray-runtime]
path = "crates/mini-ray-runtime"

[workspace.dependencies.mini-ray-head]
path = "crates/mini-ray-head"

[workspace.dependencies.mini-ray-client]
path = "crates/mini-ray-client"
